--- a/WebClient/src/components/homeModule/leftMenuComponent/leftMenuComponent.template.html
+++ b/WebClient/src/components/homeModule/leftMenuComponent/leftMenuComponent.template.html
@@ -1,4 +1,4 @@
-<div id="leftMenu" class="sideBar" :class="fncIsMenuAdmin && fncIsMenuAdmin.isAssigned===1 ? 'hidden': ''">
+<div id="leftMenu" class="sideBar" style="display: none;" :class="fncIsMenuAdmin && fncIsMenuAdmin.isAssigned===1 ? 'hidden': ''">
   <div class="LeftMainSaid">
 
     <div @click="toggleSideBar" class="expSide">
