--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -776,7 +776,7 @@ sortable-chosen.sortable-ghost {
     width: 241px;
     height: 55px;
     float: left;
-    background: #75c62e;
+    // background: #75c62e;
 }
 
 .mainLogo {
