--- a/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
+++ b/WebClient/src/components/userModule/userProfileComponentVue/userProfileComponentVue.template.html
@@ -6,7 +6,7 @@
                 <h4 class="pull-left">My Profile</h4>
                 <div class="btn-group pull-right">
                     <button class="btn btn-success btn-sm" title="Save User Profile" @click="saveUserProfile">
-                         Save
+                        Save
                     </button>
                 </div>
 
@@ -29,20 +29,19 @@
 
                                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                                     <div class="form-label userProfileName">
-                                        <!-- <label class="labels">Name:</label> -->
-                                        <label>{{userProfile.userFirstName}} {{userProfile.userLastName}}</label>
+                                        <label>{{userProfile.UserFirstName}} {{userProfile.UserLastName}}</label>
                                     </div>
-                                    <div class="form-label profileDesig">
-                                        <label class="labels">Email - </label>
-                                        <label v-text="userProfile.email"></label>
-                                    </div>
-
                                     <div class="profileHeaderImgResize">Resize Image</div>
                                     <vue-avatar-scale ref="vueavatarscale" @vue-avatar-editor-scale:change-scale="onChangeScale" :width=150 :min=1 :max=3 :step=0.02>
                                     </vue-avatar-scale>
                                 </div>
 
                             </div>
+                        </div>
+
+                        <div class="form-label profileDesig">
+                            <label class="labels">Email - </label>
+                            <label v-text="userProfile.email"></label>
                         </div>
 
                     </div>
