--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -1,26 +1,52 @@
 <div>
-    <div class="card-deck switchOrg">
-        <div class="card zoomIn animated cardWithConfig">
-            <div class="orgLogo">
-                <!-- <img v-if="personOrg.orgLogo" :src="'/renderImage/' + personOrg.orgLogo + '/50x50'" /> -->
-                <!-- <span class="orgDummyLogo" v-else></span> -->
-                <div class="card-block">
-                    <h6 class="card-title">asdfas</h6>
-                    <p class="card-text">some description</p>
+    <div class="adsBanner" style="height: 30%;">
+
+    </div>
+
+    <div class="services">
+        <div class="cellRow">
+            <div class="cell" v-for="service in servieList">
+                <img :src="service.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
+                <div class="form-group serviceName">
+                    {{service.ServiceName}} - ₹ {{service.Price}}
+                </div>
+                <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '1')">
+                    <span class="">Subscribe @ ₹ {{service.SubscriptionPrice}}</span>
+                </div>
+                <div class="form-group purchaseButton" style="padding: 5px;" @click="chooseOption(service, '2')">
+                    <span class="">Purchase Once</span>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="card zoomIn animated cardWithConfig">
-            <div class="orgLogo">
-                <!-- <img v-if="personOrg.orgLogo" :src="'/renderImage/' + personOrg.orgLogo + '/50x50'" /> -->
-                <!-- <span class="orgDummyLogo" v-else></span> -->
-                <div class="card-block">
-                    <h6 class="card-title">safds</h6>
-                    <p class="card-text">some description</p>
+    <div class="modal" data-backdrop="static" role="dialog" id="primaryEmailPopup" v-if="serviceObj">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                        <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
+                        data-dismiss="modal">
+                        &times;
+                    </button>
+                    <h4>{{serviceObj.ServiceName}}</h4>
+                </div>
+
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <div>
+                                    {{serviceObj.ServiceDescription}}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    
                 </div>
             </div>
         </div>
-
     </div>
 </div>
