--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -451,7 +451,7 @@ sortable-chosen.sortable-ghost {
 
 .mainContent {
     width: calc(100% - 63px);
-    float: right;
+    // float: right;
     margin: 0px 0 0 0
 }
 
@@ -12714,3 +12714,49 @@ body {
       margin: 0 7px;
     }
   }
+  .cellRow{
+    display: flex;
+    margin: 0 -5px;
+    padding-bottom: 15px;
+  }
+
+  
+  .cell{
+    max-width: 100%;
+    // display: flex;
+    flex: 0 0 20%;
+    padding: 0 5px;
+  }
+
+  .purchaseButton{
+      background-color: #808080;
+      padding: 5px;
+      color: white;
+      font-style: italic;
+      height: 25px;
+      font-size: 12px;
+      cursor: pointer;
+      margin-bottom: 5px;
+  }
+
+  .serviceName{
+      background-color: #3083d01c;
+      margin-top: 5px;
+      margin-bottom: 5px;
+  }
+  .services{
+    padding: 9px 0 0 0;
+  }
+
+  .carImage{
+      background: url('./images/car.png');
+  }
+
+  .navigationIcon{
+      cursor: pointer;
+  }
+
+
+  /* Ui styles */
+
+ 
