--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -1,14 +1,36 @@
-<div class="randomColorsForBtn">
-        <div class="card-deck switchOrg">
-            <div class="card zoomIn animated cardWithConfig" @click="navigateToMyProfile">
-                <div class="orgLogo">
-                    <!-- <img v-if="personOrg.orgLogo" :src="'/renderImage/' + personOrg.orgLogo + '/50x50'" /> -->
-                    <!-- <span class="orgDummyLogo" v-else></span> -->
-                    <div class="card-block">
-                        <h6 class="card-title">Profile</h6>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>    
+<div class="">
+    <div>
+        <h4>My Subscriptions</h4>
+    </div>
+    <div class="cellRow" v-for="product in subscriptions" style="border: 1px solid #65ff00">
+        <div class="cell">
+            <img :src="product.ServiceImage" height="100" width="200" @click="showMoreInfo(service)">
+
+        </div>
+        <div class="cell">
+            <div class="form-group">
+                <span style="float: right;">
+                    <i class="far fa-trash-alt"></i>
+                </span>
+            </div>
+            <div class="form-group">
+                {{product.ServiceName}}
+            </div>
+            <div class="form-group">
+                ₹ {{product.SubscriptionPrice}}
+            </div>
+            <div class="form-group">
+                <span> {{product.VehicleName}}</span>
+                <span style="color: #004dff; margin-left: 30px;">{{product.SubscribeType}}</span>
+            </div>
+            <div class="form-group" v-if="product.ServiceStatusId == 1" @click="pauseSubscription(product)" style="cursor: pointer;">
+                <span class="pauseSubscribe"><i class="far fa-pause-circle"></i> </span>
+                <span>Pause</span>
+            </div>
+            <div class="form-group" v-if="product.ServiceStatusId == 2" @click="resumeSubscription(product)" style="cursor: pointer;">
+                <span class="pauseSubscribe"><i class="far fa-play-circle"></i></span>
+                <span>Resume</span>
+            </div>
         </div>
     </div>
+</div>
