--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -60,6 +60,28 @@
             <input type="text" v-model="vehicleInfo.Promocode" class="form-control" placeholder="Promo Code">
 
         </div>
+
+    </div>
+    <div class="form-group">
+        <label>
+            Time Slot
+        </label>
+        <select v-model="vehicleInfo.TimeSlot" class="form-control">
+            <option value="8:00">8:00 AM</option>
+            <option value="9:00">9:00 AM</option>
+            <option selected value="10:00">10:00 AM</option>
+            <option value="11:00">11:00 AM</option>
+            <option value="12:00">12:00 PM</option>
+            <option value="13:00">1:00 PM</option>
+            <option value="14:00">2:00 PM</option>
+            <option value="15:00">3:00 PM</option>
+            <option value="16:00">4:00 PM</option>
+            <option value="17:00">5:00 PM</option>
+            <option value="18:00">6:00 PM </option>
+            <option value="19:00">7:00 PM</option>
+            <option value="20:00">8:00 PM</option>
+        </select>
+
     </div>
     <div class="address">
         <div>
@@ -116,8 +138,7 @@
                                         v-model.trim="searchAddressText">
                                 </div>
                                 <div class="form-control searchResultsAmenities" @click="$event.stopPropagation()"
-                                    id="propertyDropDown"
-                                    v-show="showAddressList">
+                                    id="propertyDropDown" v-show="showAddressList">
                                     <ul>
                                         <li v-for="property in propertyList" v-bind:value="property"
                                             @click="addPropertyToFilter(property)">{{property.PropertyName}}</li>
